rtkit: Autospec creation for update from version 0.11 to version 0.13
Changes based on
https://github.com/clearlinux/distribution/issues/2958, though not
switching to meson yet but keeping the patches around just in case.

Andrew Shadura (1):
      Add a format string to dbus_message_new_error_printf

Colin Walters (1):
      Pass uid of caller to polkit

Felipe Sateler (2):
      Do not keep CAP_SYS_PTRACE privilege
      build-sys: don't generate introspection xml by running the program

Jan Alexander Steffens (heftig) (22):
      systemd: Link to libsystemd instead of shipping sd-daemon
      systemd: Remove unneeded PrivateTmp
      systemd: Remove directive that causes warning
      Makefile.am: Move D-Bus system.d into datadir
      Makefile.am: Generate and install D-Bus interface XML
      Remove reading of exe names
      Makefile.am: Install rtkit-test into libexecdir/installed-tests/rtkit
      rtkit-daemon: Restore error handling for DBus property Get
      rtkit-daemon: Restore local `xml` variable
      configure.ac: Bump to 0.12
      build-sys: Use AC_PROG_SED
      build-sys: Use xxd to convert XML into .c file
      gitignore: Add xml-introspection.c, sort
      build-sys: Ensure introspect_xml is NULL-terminated
      build-sys: Replace xml-introspection.c with .h
      GPL: Update to version with https URLs
      README: Update
      editorconfig: Add config and correct indent
      build-sys: Add meson files
      Add XML prelude where missing
      Makefile.am: Dist the meson files
      build: Bump to 0.13

Julien Cristau (1):
      rtkit-test: RLIMIT_RTTIME is in usec, not nsec

Jörg Thalheim (1):
      Drop removed ControlGroup stanza

Lennart Poettering (2):
      build-sys: since clock_gettime() moved to libc use mq_open to check for librt
      systemd: update sd-daemon.[ch]

Marek Szuba (1):
      Make systemd integration (sd-daemon API calls) optional

Matt Porter (2):
      Fix rtkit-daemon dependency on xml-introspection.h
      Start

--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,8 @@
 [package]
 name = rtkit
-url = http://0pointer.de/public/rtkit-0.11.tar.xz
+url = https://github.com/heftig/rtkit/releases/download/v0.13/rtkit-0.13.tar.xz
 archives = 
-giturl = 
+giturl = https://github.com/heftig/rtkit.git
 domain = 
 alias = 
 
@@ -68,5 +68,5 @@ use_clang = false
 # configure build for lto
 use_lto = false
 # require package verification for build
-verify_required = false
+verify_required = true
 
